fix slider spacing

--- a/web/client/hydrata/ProjectManager/projectManager.css
+++ b/web/client/hydrata/ProjectManager/projectManager.css
@@ -16,7 +16,7 @@
 }
 
 .dataset-transparency {
-    margin-left: 180px;
+    margin-left: 380px;
     margin-top: 15px;
 }
 
